src/test/deca/syntax/invalid/include_circulaire.deca
//  Description :
//            Inclure le fichier actuel dans le fichier actuel
//
// Résultat:
//Circular include
//
#include "include_circulaire.deca"